# vscode_devcontainer_py

./: .dockerignore  README.md  pyproject.ipynb  pyproject.toml  readme.md  run_devcontainer.sh
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  environment_bioconda.yml  noop.txt
workspace/: py_test.ipynb
