# pyproject.toml
[tool.poetry]
name = "ml_devcontainer"
version = "0.1.0"
description = "A Python project configured for VS Code Dev Containers."
authors = ["decontainer_dev"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Core dependencies
requests = "*"

[tool.poetry.group.web.dependencies]
fastapi = "*"
flask = "*"
jinja2 = "*"
sqlmodel = "*"
uvicorn = {extras = ["standard"], version = "*"}

[tool.poetry.group.ml.dependencies]
keras = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
streamlit = "*"
tensorflow = "*"
tf-keras = "*"
torch = "*"
torchaudio = "*"
torchdata = "*"
torchvision = "*"
transformers = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ipykernel = "*"
ipywidgets = "*"
jupyter = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
